Fix filter badge text cropped off

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -430,6 +430,7 @@
 
     > span + span {
       position: static;
+      width: auto;
 
       &:empty {
         display: none;
